--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 								<h3 class="heading txt-sm txt-n">联系信息</h3>
 								<h4><span class="fa fa-tablet"></span><span class="college">18435397077</span></h4>
 								<h4><span class="fa fa-envelope"></span><span class="college">18435397077@163.com</span></h4>
-								<h4><span class="fa fa-map-marker"></span><span class="college">杭州</span></h4>
+								<h4><span class="fa fa-map-marker"></span><span class="college">北京</span></h4>
 							</div>
 						</div>
 						<div class="col-sm-12 text-center">
